--- a/src/main/webapp/i18n/ar-ly/structure.json
+++ b/src/main/webapp/i18n/ar-ly/structure.json
@@ -20,6 +20,7 @@
       "id": "ID",
       "nom": "Nom",
       "type": "Type",
+      "image": "Image",
       "parent": "Parent",
       "employe": "Employe"
     }
