--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -1,6 +1,6 @@
 {
   "global": {
-    "title": "Ges_employer",
+    "title": "MINISTERE DE LA TRANSITION NUMERIQUE, DE <br> L'INNOVATION ET DE LA. MODERNISATION DE L'ADMINISTRATION",
     "browsehappy": "Vous utilisez un <strong>ancien</strong> navigateur. Veuillez <a href=\"http://browsehappy.com/?locale=fr\">mettre à jour votre navigateur</a> pour une meilleure expérience.",
     "menu": {
       "home": "Accueil",
