--- a/src/main/webapp/i18n/ar-ly/fonction.json
+++ b/src/main/webapp/i18n/ar-ly/fonction.json
@@ -12,7 +12,8 @@
       "CHEF_SERVICE": "CHEF_SERVICE",
       "CHEF_DIVISION": "CHEF_DIVISION",
       "CADRE": "CADRE",
-      "AUTRE": "AUTRE"
+      "AUTRE": "AUTRE",
+      "ATTACHE": "ملحق"
     }
   }
 }
