--- a/src/main/webapp/i18n/fr/diplome.json
+++ b/src/main/webapp/i18n/fr/diplome.json
@@ -15,11 +15,11 @@
         "question": "Êtes-vous certain de vouloir supprimer le Diplome {{ id }} ?"
       },
       "detail": {
-        "title": "Diplome"
+        "title": "Diplôme"
       },
       "id": "ID",
       "libelle": "Libelle",
-      "universite": "Universite",
+      "universite": "Etablissement",
       "date": "Date",
       "description": "Description",
       "diplome": "Diplome",
