--- a/src/main/webapp/i18n/ar-ly/home.json
+++ b/src/main/webapp/i18n/ar-ly/home.json
@@ -1,7 +1,9 @@
 {
   "home": {
-    "title": "أهلا وسهلا بك، جافا هبستر!",
-    "subtitle": "هذه صفحتك الرئيسية",
+    "title": "\u200Eفي تطبيق تسيير الموظفين الذي يسمح لك بمعاينة إدارات وموظفي وزارة \n\n\u200Eالتحول الرقمي و الابتكار و عصرنة الإدارة",
+    "subtitle": "مرحبًا بكم",
+    "connecter": "تسجيل الدخول",
+    "inscrire": "إنشاء حساب جديد",
     "logged": {
       "message": "قمت بتسجيل الدخول كمستخدم \"{{username}}\"."
     },
