--- a/src/main/webapp/i18n/fr/home.json
+++ b/src/main/webapp/i18n/fr/home.json
@@ -1,7 +1,9 @@
 {
   "home": {
-    "title": "Bienvenue, Java Hipster !",
-    "subtitle": "Ceci est votre page d'accueil",
+    "title": "Dans l'application de gestion du personnel qui vous permet de consulter les directions et les employés du Ministère de\n                     la Transition Numérique de l'Innovation et de la Modernisation",
+    "subtitle": "BIENVENUE",
+    "connecter": "Se Connecter",
+    "inscrire": "S'inscrire",
     "logged": {
       "message": "Vous êtes connecté en tant que \"{{username}}\"."
     },
