--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -3,7 +3,7 @@
     "title": "MINISTERE DE LA TRANSITION NUMERIQUE, DE L'INNOVATION  <br> &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   ET DE LA MODERNISATION DE L'ADMINISTRATION",
     "browsehappy": "Vous utilisez un <strong>ancien</strong> navigateur. Veuillez <a href=\"http://browsehappy.com/?locale=fr\">mettre à jour votre navigateur</a> pour une meilleure expérience.",
     "menu": {
-      "home": "Accueil",
+      "home": "BIENVENUE",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Mon Profil",
