--- a/src/main/webapp/i18n/fr/home.json
+++ b/src/main/webapp/i18n/fr/home.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Dans l'application de gestion du personnel qui vous permet de consulter les directions et les employés du Ministère de\n                     la Transition Numérique de l'Innovation et de la Modernisation",
+    "title": "Dans l'application de gestion de profils du personnel qui vous permet de consulter les directions et les employés du Ministère de\n                     la Transition Numérique de l'Innovation et de la Modernisation",
     "subtitle": "BIENVENUE",
     "connecter": "Se Connecter",
     "inscrire": "S'inscrire",
